--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:name=".BootstrapActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:noHistory="true"
+            android:excludeFromRecents="true"
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
