--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,7 @@
-# Project-wide Gradle settings.
+nexusUrl=http://build.corp.graphitesoftware.com:8081/nexus
+nexusUsername=graphite
+nexusPassword=graphite
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# Uncomment to enable signing with Properties File
+# NOTE: must also apply plugin: 'com.securespaces.signing'
+signing.properties=${System.env.HOME}/.android/graphite-keys/graphite-release.properties
