--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "${nexusUrl}/content/groups/public"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.securespaces.plugin:signing-gradle-plugin:1.+'
     }
 }
 
