the first chunk of work

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "${nexusUrl}/content/groups/public"
+        }
     }
 }
 
