--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
+    compile project(':SpaceAppLibrary')
 }
