--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.securespaces.android.bootstrap"
         minSdkVersion 22
         targetSdkVersion 22
-        versionCode 8
-        versionName "1.07"
+        versionCode 9
+        versionName "1.08"
     }
     buildTypes {
         release {
@@ -45,5 +45,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
-    compile project(':SpaceAppLibrary')
+    compile ('com.securespaces.android.sdk:SpaceAppLibrary:10.0.08-SNAPSHOT@aar')
 }
