can now download and install apps

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 include ':app'
 
-include ':SpaceAppLibrary'
-project(':SpaceAppLibrary').projectDir = new File(settingsDir, '../../space-apps/SpaceAppLibrary/app')
+//include ':SpaceAppLibrary'
+//project(':SpaceAppLibrary').projectDir = new File(settingsDir, '../../space-apps/SpaceAppLibrary/app')
+
+include 'SpacesManager'
+project(':SpacesManager').projectDir = new File(settingsDir, '../../android-6/packages/apps/SpacesManager')
