--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.securespaces.android.bootstrap"
         minSdkVersion 22
         targetSdkVersion 22
-        versionCode 12
-        versionName "1.11"
+        versionCode 13
+        versionName "1.12"
     }
     buildTypes {
         release {
@@ -37,7 +37,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
-    compile 'com.securespaces.android.sdk:SecureSpacesSDK:4.2.0:internalRelease@aar'
-    compile project(':SpaceAppLibrary')
-    //compile ('com.securespaces.android.sdk:SpaceAppLibrary:10.0.08-SNAPSHOT@aar')
+    //compile 'com.securespaces.android.sdk:SecureSpacesSDK:4.2.0:internalRelease@aar'
+    compile project(':SpacesManager')
+    //compile project(':SpaceAppLibrary')
+    compile ('com.securespaces.android.sdk:SpaceAppLibrary:10.1.00@aar')
 }
