--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,17 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.securespaces.android.bootstrap"
+        applicationId "com.securespaces.fashion.wizard"
         minSdkVersion 22
         targetSdkVersion 22
-        versionCode 19
-        versionName "1.19"
+        versionCode 20
+        versionName "1.20"
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
     buildTypes {
         release {
