--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.securespaces.signing'
 
-def apkName = "EnterpriseBootstrap"
+def apkName = "Bootstrap"
 
 android {
     compileSdkVersion 23
@@ -11,8 +11,8 @@ android {
         applicationId "com.securespaces.android.wizard"
         minSdkVersion 22
         targetSdkVersion 22
-        versionCode 23
-        versionName "1.23"
+        versionCode 25
+        versionName "1.3"
     }
     lintOptions {
         checkReleaseBuilds false
